--- a/style/style.css
+++ b/style/style.css
@@ -310,7 +310,7 @@ line-height: 20px;
   width: 100%;
   background-color: #ffc59e;
   margin-top: 309px;
-  background-image: url(../img/Group21.png);
+  background-image: url(../img/Group\ 21.png);
  max-width: 2000px;
   height: 1080px;
   background-size: 724px 760px;
